# cstructs-in-haskell

./: .gitignore  .travis.yml  C-structs.cabal  CHANGELOG.md  LICENSE  README.md  c-structs.cabal  flake.nix  stack-lts-3.yaml  stack-lts-9.yaml
.github/workflows/: haskell.yml
Foreign/C/: Structs.hs
Foreign/C/Structs/: Types.hs  Utils.hs
src/Foreign/C/: Structs.hs
src/Foreign/C/Structs/: Templates.hs  Types.hs  Utils.hs
test/: CTest.hs  CTestTemplate.hs  DocTest.hs  Main.hs  Properties.hs  Templates.hs  UnitTests.hs
test/libs/: c_test.c  c_test.h
