Name: c-structs
Version: 0.0.0.1
Cabal-Version: >= 1.8
License: MIT
License-file: LICENSE
Author: Simon Plakolb
Copyright: (c) 2020 Simon Plakolb
Homepage: https://github.com/pinselimo/cstructs-in-haskell
Synopsis: C-Structs implementation for Haskell
Description: Create correct C structs from Haskell!
Maintainer: s.plakolb@gmail.com
Category: Foreign
Build-Type: Simple

Source-Repository head
    type: git
    location: https://github.com/pinselimo/cstructs-in-haskell

Library
    Default-Language: Haskell2010
    Exposed-Modules:
        Foreign.C.Structs
    Other-Modules:
        Foreign.C.Structs.Types,
        Foreign.C.Structs.Utils
    Build-Depends:  base
    HS-Source-Dirs: src

Test-Suite unit-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base                        ,
        c-structs                   ,
        HUnit                       ,
        QuickCheck                  ,
        test-framework              ,
        test-framework-hunit        ,
        test-framework-quickcheck2

Test-Suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs: test
  build-depends:
    base                        ,
    doctest                     ,
    Glob
