Name: C-structs
Version: 0.1.0.1
Cabal-Version: >= 1.8
License: MIT
License-file: LICENSE
Author: Simon Plakolb
Copyright: (c) 2020 Simon Plakolb
Homepage: https://github.com/pinselimo/cstructs-in-haskell
Synopsis: C-Structs implementation for Haskell
Description: Create correct C structs from Haskell!
Maintainer: s.plakolb@gmail.com
Category: Foreign
Build-Type: Simple

Source-Repository head
    type: git
    location: https://github.com/pinselimo/cstructs-in-haskell

Library
    Default-Language: Haskell2010
    Exposed-Modules:
        Foreign.C.Structs
    Other-Modules:
        Foreign.C.Structs.Types,
        Foreign.C.Structs.Utils
    Build-Depends:  base >= 3.0.0 && < 5.0.0
    HS-Source-Dirs: src

Test-Suite unit-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base         >= 3.0 && < 5.0,
        C-structs    >= 0.1 && < 0.2,
        HUnit        >= 1.2 && < 1.7,
        QuickCheck   >= 2.3 && < 2.15,
        test-framework  >= 0.4.1 && < 0.9,
        test-framework-hunit >= 0.2.8 && < 0.4,
        test-framework-quickcheck2 >= 0.2.8 && < 0.4

Test-Suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs: test
  build-depends:
    base        >= 4.0 && < 5.0,
    doctest     >= 0.10 && < 0.18,
    Glob        >= 0.8 && < 0.11
