Name: C-structs
Version: 0.1.0.1
Cabal-Version: >= 1.10
License: MIT
License-file: LICENSE
Author: Simon Plakolb
Copyright: (c) 2020 Simon Plakolb
Homepage: https://github.com/pinselimo/cstructs-in-haskell
Synopsis: C-Structs implementation for Haskell
Description: Create correct C structs from Haskell!
Maintainer: s.plakolb@gmail.com
Category: Foreign
Build-Type: Simple
Tested-With: GHC==8.10.1, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

Source-Repository head
    type: git
    location: https://github.com/pinselimo/cstructs-in-haskell

Library
    Exposed-Modules:
        Foreign.C.Structs
    Other-Modules:
        Foreign.C.Structs.Types,
        Foreign.C.Structs.Utils
    Default-Language: Haskell2010
    Build-Depends:  base >= 3.0.0 && < 5.0.0
    HS-Source-Dirs: src

Test-Suite unit-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    Other-Modules:
        UnitTests,
        Properties
    Default-Language: Haskell2010
    hs-source-dirs: test
    build-depends:
        C-structs,
        base         >= 3.0 && < 5.0,
        HUnit        >= 1.2 && < 1.7,
        QuickCheck   >= 2.3 && < 2.15,
        test-framework  >= 0.4.1 && < 0.9,
        test-framework-hunit >= 0.2.8 && < 0.4,
        test-framework-quickcheck2 >= 0.2.8 && < 0.4

Test-Suite doctest
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    Default-Language: Haskell2010
    hs-source-dirs: test
    build-depends:
        base        >= 4.0 && < 5.0,
        doctest     >= 0.10 && < 0.18,
        Glob        >= 0.8 && < 0.11
