Name: c-structs
Version: 0.0.0.1
Cabal-Version: >= 1.2
License: MIT
License-file: LICENSE
Author: Simon Plakolb
Homepage: https://github.com/pinselimo/cstructs-in-haskell
Synopsis: C-Structs implementation for Haskell
Description: Create correct C structs from Haskell!
Maintainer: s.plakolb@gmail.com
Category: Foreign
Build-Type: Simple

Library
    Exposed-Modules: 
        Foreign.C.Structs
    Other-Modules:
        Foreign.C.Structs.Types
        Foreign.C.Structs.Utils
    Build-Depends:  base
